assets/mediaquery.css
@media screen and (max-width: 1750px) {
  .header-bottom {
    padding: 0;
    justify-content: center;
  }

  .project-container {
    column-gap: 0;
  }

  .work-list {
    margin-right: 0;
  }
}

@media screen and (max-width: 1450px) {
  .blocco {
    padding: 0 5%;
  }

  .email,
  #p-name {
    font-size: 11rem !important;
  }

  #works {
    width: 100%;
    height: 100%;
  }

  .project-list {
    row-gap: 200px;
  }

  h1 {
    font-size: 6rem !important;
    line-height: 80px;
  }

  .project-img {
    width: 500px;
    height: 650px;
  }

  .work-exp p {
    margin-right: 200px;
  }
}

@media screen and (max-width: 1024px) {
  h1 {
    font-size: 3.5rem !important;
  }

  #header {
    display: none !important;
  }

  #projects h2 {
    margin-left: 0;
  }

  .project-container {
    flex-direction: column;
  }

  .project-img {
    width: 100%;
    height: 500px;
  }

  .project-list-right {
    margin-top: 100px;
  }

  .project-list-left,
  .project-list-right {
    row-gap: 100px;
  }

  #works {
    padding: 50px 30px;
  }

  .header-links img {
    max-width: 43px;
  }

  .header-container {
    width: 100%;
    row-gap: 50px;
    padding: 20px 30px;
  }

  .header-container img {
    margin-top: 10px;
  }

  .project-list-carousel {
    width: 100% !important;
  }

  .project-list {
    flex-direction: column;
  }

  .project-list-carousel {
    overflow: hidden !important;
  }

  #projects {
    /* margin: 0 30px; */
    text-align: left;
  }
}

@media screen and (max-width: 768px) {
  body,
  html *,
  body * {
    cursor: none;
  }

  button,
  a {
    cursor: auto;
  }
  h1 {
    line-height: 50px;
  }

  h2 {
    font-size: 2.5rem !important;
    line-height: unset;
    margin-bottom: 20px !important;
  }

  h3 {
    font-size: 1.5rem !important;
    line-height: unset;
    margin-bottom: 20px !important;
  }

  p {
    font-size: 1.35rem;
  }

  .blocco {
    margin-bottom: 150px !important;
    padding: 0 30px;
  }

  .header-anchors {
    font-size: 1.25rem;
  }

  .header-bottom {
    padding: 0;
    justify-content: center;
  }

  #footer {
    align-items: center;
    text-align: center;
    height: 100vh;
    margin-bottom: 0 !important;
  }

  #projects {
    margin-bottom: 0 !important;
  }

  #p-name {
    display: none;
  }

  #p-name-mobile {
    display: block;
  }

  .email {
    font-size: 1.5rem !important;
  }

  #intro span {
    bottom: 50px;
  }

  #about {
    flex-direction: column;
    gap: 50px;
  }

  #about img {
    width: 100%;
  }

  #intro {
    background-position: center;
  }

  #intro p {
    font-size: 2.25rem;
  }
}

@media screen and (max-width: 480px) {
}

